# learn_ds_ml

./: CLAUDE.md  README.md  learn_ds_ml.code-workspace  main.py  pyproject.toml
notebooks/05_pandas/: faq.md  notes.ipynb  problems.txt
notebooks/05_pandas/data/: marks.csv  subs_count.csv
notebooks/06_feature_enginerring/: notes.ipynb
notebooks/pandas/: faq.md  notes.ipynb
